# qtico

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yml  publish.yml
qtico/: __init__.py  common.py  install_theme.py  osx_iconset.py  qrc_compile.py  theme_index.py
src/qtico/: __init__.py  common.py  install_theme.py  osx_iconset.py  qrc_compile.py  theme_index.py
tests/: test_basic.py
